--- a/app/index.html
+++ b/app/index.html
@@ -5,25 +5,26 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/normalize.css">
     <link rel="stylesheet" href="css/style.min.css">
+    <link href="https://fonts.googleapis.com/css?family=Rubik:300,regular,500,600,700,800,900,300italic,italic,500italic,600italic,700italic,800italic,900italic" rel="stylesheet" />
+
     
-    <title>Document</title>
+    <title>Триколор</title>
 </head>
 <body>
         <main class="page">
-
         <header class="header">
             <div class="container">
                 <div class="header__wrapper">
                     <div class="header__logo">
-                        <img src="images/logo/logo.png" alt="" class="logo">
+                        <a href="" class="header__logo-link"><img src="images/logo/logo.png" alt="" class="logo"></a>
                     </div>
                     <nav class="nav">
                         <ul class="nav__list">
-                            <li class="nav__item"><a href="" class="nav__link">Купить</a></li>
-                            <li class="nav__item"><a href="" class="nav__link">Обменять</a></li>
-                            <li class="nav__item"><a href="" class="nav__link">Установить/Настроить</a></li>
-                            <li class="nav__item"><a href="" class="nav__link">Решить проблему</a></li>
-                            <li class="nav__item"><a href="" class="nav__link">Каналы и тарифы</a></li>
+                            <li class="nav__item"><a href="#" class="nav__link">Купить</a></li>
+                            <li class="nav__item"><a href="#" class="nav__link">Обменять</a></li>
+                            <li class="nav__item"><a href="#" class="nav__link">Установить/Настроить</a></li>
+                            <li class="nav__item"><a href="#" class="nav__link">Решить проблему</a></li>
+                            <li class="nav__item"><a href="#" class="nav__link">Каналы и тарифы</a></li>
                         </ul>
                         
                     </nav>
