--- a/app/index.html
+++ b/app/index.html
@@ -5,7 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/normalize.css">
     <link rel="stylesheet" href="css/style.min.css">
-    <link href="https://fonts.googleapis.com/css?family=Rubik:300,regular,500,600,700,800,900,300italic,italic,500italic,600italic,700italic,800italic,900italic" rel="stylesheet" />
+    <!-- &display=swap &subset=cyrillic-ext -->
+    <link href="https://fonts.googleapis.com/css?family=Rubik:300,regular,500,600,700,800,900,300italic,italic,500italic,600italic,700italic,800italic,900italic" rel="stylesheet" &display=swap &subset=cyrillic-ext />
 
     
     <title>Триколор</title>
@@ -32,7 +33,9 @@
                         <a href="tel:+74999228974" class="header__phone">8 800 122-11-22</a>
                         <a href="tel:+74999228974" class="header__phone">8 909 730-59-90</a>
                     </div>
-                    <button class="header__button btn">закакзать звонок</button>
+                    <button class="header__button btn">Закакзать звонок</button>
+
+
 
                 </div>
             </div>
