--- a/app/index.html
+++ b/app/index.html
@@ -4,6 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="https://unpkg.com/swiper/swiper-bundle.min.css" />
     <link rel="stylesheet" href="css/normalize.css">
     <link rel="stylesheet" href="css/style.min.css">
     <!-- &display=swap &subset=cyrillic-ext -->
@@ -49,8 +50,9 @@
             <div class="hero__slider-block">
                 <div class="swiper-container">
                     <div class="swiper-wrapper">
-                        <div class="swiper-slide">Slide 1</div>
-                        <div class="swiper-slide">Slide 2</div>
+                        <div class="swiper-slide"><img src="images/bg/слайд1.jpg" alt=""></div>
+                        <div class="swiper-slide"><img src="images/bg/слайд2.jpg" alt=""></div>
+                        <div class="swiper-slide"><img src="images/bg/слайд3.jpg" alt=""></div>
                         ...
                     </div>
                     <div class="swiper-pagination"></div>
