Структура scss документов. Свайпер

--- a/app/index.html
+++ b/app/index.html
@@ -45,23 +45,31 @@
             </div>
         </header>
 
-        <section class="hero"></section>
-        <div class="container">
-            <div class="hero__slider-block">
-                <div class="swiper-container">
-                    <div class="swiper-wrapper">
-                        <div class="swiper-slide"><img src="images/bg/слайд1.jpg" alt=""></div>
-                        <div class="swiper-slide"><img src="images/bg/слайд2.jpg" alt=""></div>
-                        <div class="swiper-slide"><img src="images/bg/слайд3.jpg" alt=""></div>
+        <section class="hero">
+            <div class="container">
+                <div class="hero__wrapper">
+                    <div class="hero__slider-block">
+                        <div class="heroswiper-container">
+                            <div class="heroswiper-wrapper">
+                                <div class="heroswiper-slide">Slide 1</div>
+                                <div class="heroswiper-slide">Slide 2</div>
+                            </div>
+                            <div class="heroswiper-pagination"></div>
+                        </div>
                     </div>
-                    <div class="swiper-pagination"></div>
-                    <div class="swiper-button-prev"></div>
-                    <div class="swiper-button-next"></div>
-                    <div class="swiper-scrollbar"></div>
+                    <div class="hero__services">
+                        <h1 class="hero__services-title">Установка, продажа и настройка оборудования <span class="accent">ТРИКОЛОР</span></h1>
+                        <ul class="hero__services-list">
+                            <div class="hero__services-descr">Закажите оборудование сейчас и получите <span class="accent">3 ПОДАРКА:</span></div>
+                            <li class="hero__services-item">Грозозащиту</li>
+                            <li class="hero__services-item">Сим-карту с безлимитным интернет тарифом</li>
+                            <li class="hero__services-item">Скидку 10% на любую услугу</li>
+                        </ul>
+                        <buttob class="hero__btn btn" ></buttob>
+                    </div>
                 </div>
             </div>
-            </section>
-
+        </section>
 
 
     </main>
