--- a/app/index.html
+++ b/app/index.html
@@ -65,7 +65,25 @@
                             <li class="hero__services-item">Сим-карту с безлимитным интернет тарифом</li>
                             <li class="hero__services-item">Скидку 10% на любую услугу</li>
                         </ul>
-                        <buttob class="hero__btn btn" ></buttob>
+                        <button class="hero__btn btn" >заказать</button>
+                        <div class="hero__promo-cards">
+                            <div class="hero__promo-card">
+                                <div class="hero__promo-card-icon"></div>
+                                <div class="hero__promo-card-text">220 каналов
+                                    в HD качестве</div>
+                            </div>
+                            <div class="hero__promo-card">
+                                <div class="hero__promo-card-icon"></div>
+                                <div class="hero__promo-card-text">от 100 рублей
+                                    в месяц</div>
+                            </div>
+                            <div class="hero__promo-card">
+                                <div class="hero__promo-card-icon"></div>
+                                <div class="hero__promo-card-text">Надежный прием 
+                                    в любой точке РФ</div>
+                            </div>
+                        </div>
+                        
                     </div>
                 </div>
             </div>
@@ -77,8 +95,8 @@
     <footer class="footer"></footer>
 
     <script src="https://unpkg.com/swiper/swiper-bundle.min.js"></script>
-    <script src="js/main.js"></script>
     <script src="js/swiper.js"></script>
+    <script src="js/main.js"></script>
 
 </body>
 
