--- a/app/index.html
+++ b/app/index.html
@@ -68,17 +68,23 @@
                         <button class="hero__btn btn" >заказать</button>
                         <div class="hero__promo-cards">
                             <div class="hero__promo-card">
-                                <div class="hero__promo-card-icon"></div>
+                                <div class="hero__promo-card-icon">
+                                    <img src="images/icons/hd-icon.png" alt="" class="hero__promo-card-img">
+                                </div>
                                 <div class="hero__promo-card-text">220 каналов
                                     в HD качестве</div>
                             </div>
                             <div class="hero__promo-card">
-                                <div class="hero__promo-card-icon"></div>
+                                <div class="hero__promo-card-icon">
+                                    <img src="images/icons/mony-icon.png" alt="" class="hero__promo-card-img">
+                                </div>
                                 <div class="hero__promo-card-text">от 100 рублей
                                     в месяц</div>
                             </div>
                             <div class="hero__promo-card">
-                                <div class="hero__promo-card-icon"></div>
+                                <div class="hero__promo-card-icon">
+                                    <img src="images/icons/signal-icon.png" alt="" class="hero__promo-card-img">
+                                </div>
                                 <div class="hero__promo-card-text">Надежный прием 
                                     в любой точке РФ</div>
                             </div>
