--- a/app/index.html
+++ b/app/index.html
@@ -17,44 +17,53 @@
 </head>
 
 <body>
-    <main class="page">
-        <header class="header">
-            <div class="container">
-                <div class="header__wrapper">
-                    <div class="header__logo">
-                        <a href="" class="header__logo-link"><img src="images/logo/logo.png" alt="" class="logo"></a>
-                    </div>
-                    <nav class="nav">
-                        <ul class="nav__list">
-                            <li class="nav__item"><a href="#" class="nav__link">Купить</a></li>
-                            <li class="nav__item"><a href="#" class="nav__link">Обменять</a></li>
-                            <li class="nav__item"><a href="#" class="nav__link">Установить/Настроить</a></li>
-                            <li class="nav__item"><a href="#" class="nav__link">Решить проблему</a></li>
-                            <li class="nav__item"><a href="#" class="nav__link">Каналы и тарифы</a></li>
-                        </ul>
-
-                    </nav>
-                    <div class="header__contacts">
-                        <a href="tel:+74999228974" class="header__phone">8 800 122-11-22</a>
-                        <a href="tel:+74999228974" class="header__phone">8 909 730-59-90</a>
-                    </div>
-                    <button class="header__button btn">Закакзать звонок</button>
-
-
+    <header class="header">
+        <div class="container">
+            <div class="header__wrapper">
+                <div class="header__logo">
+                    <a href="" class="header__logo-link"><img src="images/logo/logo.png" alt="" class="logo"></a>
                 </div>
+                <nav class="nav">
+                    <ul class="nav__list">
+                        <li class="nav__item"><a href="#" class="nav__link">Купить</a></li>
+                        <li class="nav__item"><a href="#" class="nav__link">Обменять</a></li>
+                        <li class="nav__item"><a href="#" class="nav__link">Установить/Настроить</a></li>
+                        <li class="nav__item"><a href="#" class="nav__link">Решить проблему</a></li>
+                        <li class="nav__item"><a href="#" class="nav__link">Каналы и тарифы</a></li>
+                    </ul>
+
+                </nav>
+                <div class="header__contacts">
+                    <a href="tel:+74999228974" class="header__phone">8 800 122-11-22</a>
+                    <a href="tel:+74999228974" class="header__phone">8 909 730-59-90</a>
+                </div>
+                <button class="header__button btn">Закакзать звонок</button>
+
+
             </div>
-        </header>
+        </div>
+    </header>
+
+    <main class="page">
 
         <section class="hero">
             <div class="container">
                 <div class="hero__wrapper">
                     <div class="hero__slider-block">
-                        <div class="heroswiper-container">
-                            <div class="heroswiper-wrapper">
-                                <div class="heroswiper-slide">Slide 1</div>
-                                <div class="heroswiper-slide">Slide 2</div>
+                        <div class="hero__swiper-container">
+                            <div class="hero__swiper-wrapper">
+                                <div class="hero__swiper-slide">
+                                    <div class="hero__swiper-bg"></div>
+                                    <img class="hero__swiper-paralax-antenna">
+                                    <img class="hero__swiper-paralax-router">
+                                </div>
+                                <div class="hero__swiper-slide">
+                                    <div class="hero__swiper-bg"></div>
+                                    <img class="hero__swiper-paralax-img1">
+                                    <img class="hero__swiper-paralax-img2">
+                                </div>
                             </div>
-                            <div class="heroswiper-pagination"></div>
+                            <div class="hero__swiper-pagination"></div>
                         </div>
                     </div>
                     <div class="hero__services">
@@ -94,6 +103,7 @@
                 </div>
             </div>
         </section>
+        Lorem ipsum dolor sit amet consectetur, adipisicing elit. Iusto vel praesentium corporis assumenda, nam culpa perspiciatis amet distinctio eaque et! Dolor iure itaque libero tempore, fugiat, eaque pariatur sapiente magni aperiam voluptate, enim animi laborum ipsum adipisci consectetur molestiae nam exercitationem nulla! Illo qui quae veniam obcaecati deserunt minima delectus porro, pariatur saepe temporibus quas fuga repellendus perspiciatis aliquid sit rem quod maiores quidem et eligendi voluptates. Fugit deserunt rem vel cumque illum magni dolore quos, provident, expedita, molestias eius sed. Aliquid facilis recusandae eius pariatur, natus quidem ipsum assumenda perspiciatis nihil saepe nisi harum repellat laboriosam! Dolor voluptatum voluptatibus earum perspiciatis velit laboriosam quaerat, nihil laudantium necessitatibus quos esse optio neque qui est mollitia iusto rerum, eveniet ratione nemo, soluta sequi aliquam! Enim non totam a nihil nobis ipsum reiciendis error modi quibusdam, similique necessitatibus dolores sed culpa? Incidunt nihil necessitatibus quod provident est iste excepturi animi eius sunt ab nobis sapiente, non labore voluptas dicta dolorem repellat porro blanditiis soluta sint enim saepe earum at. Dolorem eum inventore asperiores iusto hic numquam earum mollitia ad ipsam, reprehenderit corrupti a similique? Quod, animi! Molestias tenetur ex asperiores ipsum eos nihil vel ratione facere nemo nisi? Aspernatur eos recusandae, aliquam a reprehenderit dolores commodi non praesentium nemo ex, possimus unde sequi? Libero animi iure provident doloribus sequi, incidunt pariatur sunt officiis! Quis odio magnam ea ad saepe veritatis tempore impedit perspiciatis quo cumque, maiores commodi dignissimos, optio neque dolorem magni nulla. Quaerat accusantium molestiae natus. Earum dicta rerum suscipit corporis voluptate, impedit id maxime omnis! Aut, unde consequatur! Magni dicta dolor facere veniam architecto sunt vel ut molestias atque? Fugiat ducimus quo earum deleniti maiores tenetur veniam a nam alias blanditiis adipisci, ipsa laboriosam ratione magni voluptatibus dicta totam, aperiam numquam consequuntur corrupti id vitae! Nobis eligendi error dicta doloribus sit iusto odit cumque soluta ullam mollitia culpa, omnis adipisci, optio a nulla molestias magnam nam reiciendis, necessitatibus sunt eius pariatur tempora magni ipsum. Ab nam veniam recusandae sed qui blanditiis ipsum porro eum voluptas. Magni iste aut praesentium doloribus placeat, beatae sed, tempora ullam nesciunt quis error ratione deleniti reiciendis quasi alias explicabo obcaecati autem dolorem voluptate. Iste deserunt libero incidunt tempore, porro reiciendis odio saepe. Quis ipsam perspiciatis, incidunt repudiandae pariatur provident voluptas asperiores placeat minus autem obcaecati laborum praesentium animi perferendis, est officia rerum enim minima magnam! Harum illum, repellendus quis adipisci provident animi, consectetur et culpa, ipsa quam aliquid similique officia ipsam officiis libero consequuntur corrupti iure. Pariatur similique rem obcaecati quia optio exercitationem sequi qui dolore, sunt fugit a vero voluptate vel eum iste illo necessitatibus temporibus perspiciatis ad excepturi deserunt sit cupiditate corrupti consequuntur. Architecto debitis distinctio non modi accusamus possimus pariatur quo vel maxime labore impedit eos placeat doloremque explicabo laboriosam quod, officia ex maiores natus veritatis cumque nisi. Natus quo sed a amet odio numquam nobis doloribus. Quasi blanditiis, vitae quod veritatis autem excepturi animi maxime aliquam commodi aut asperiores voluptates possimus debitis adipisci dolorem architecto at iste deleniti mollitia? Error molestiae totam itaque earum repellendus aliquid accusamus est nam omnis nihil, dicta quisquam sequi maiores pariatur eaque. Quia quisquam dignissimos ut doloribus vel, perspiciatis impedit repellendus dolores recusandae eligendi vitae ullam nisi sequi odio pariatur delectus quos laborum, consequuntur ratione nobis, esse cumque adipisci fuga! Alias qui dolor adipisci ducimus nostrum, sint quidem, id hic maiores fugit sapiente et nihil at earum dolorum magni cum aliquam necessitatibus rem commodi veniam, quibusdam quasi possimus asperiores. Natus, in rem itaque fuga sequi ea magni commodi expedita delectus, assumenda nihil esse voluptatum ut illum repudiandae nam dolor totam ullam. Qui consequuntur saepe, praesentium necessitatibus obcaecati iure nihil consequatur quo corporis odit reiciendis dolores ratione fugit, dignissimos, perferendis ab! Aspernatur, ipsam dignissimos magni aperiam eligendi explicabo incidunt. Porro molestias ducimus nisi est obcaecati qui illo eum nulla, iste possimus repellat quam laboriosam incidunt iure ratione delectus perferendis nihil sunt nemo deleniti ea? Deleniti quasi culpa excepturi. Ipsam, iusto saepe velit labore ducimus consequatur, autem temporibus tempore nisi impedit corrupti sunt suscipit libero id reiciendis similique explicabo assumenda doloremque quos voluptate cupiditate molestiae. Consequatur suscipit, assumenda pariatur unde sunt eos totam possimus. Rerum sit ducimus debitis harum, perferendis vel sed exercitationem, libero fugit possimus culpa. Deserunt dolor quam, accusantium consequatur rerum ad impedit fuga laboriosam accusamus similique. Fugit laborum, harum veritatis quasi at vel maiores delectus maxime. Ipsa ducimus quae corporis velit cumque, optio non nobis! Molestias perspiciatis voluptas saepe a pariatur beatae unde temporibus molestiae consequatur officiis nam blanditiis quod possimus, fuga ipsam quasi labore dolore quis! Iusto quisquam sed vitae autem! Facere temporibus quasi nesciunt illum odit! Odio fugit inventore iusto qui illum aliquam id quasi expedita, cumque quaerat officiis amet, voluptate ipsum voluptates esse explicabo possimus delectus vero totam animi excepturi. Labore, unde! Deleniti fuga repudiandae maiores iste dicta fugit. Assumenda, ullam eum.
 
 
     </main>
