Правки в html структуре

--- a/app/index.html
+++ b/app/index.html
@@ -4,13 +4,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link
+        href="https://fonts.googleapis.com/css?family=Rubik:300,regular,500,600,700,800,900,300italic,italic,500italic,600italic,700italic,800italic,900italic"
+        rel="stylesheet" &display=swap &subset=cyrillic-ext />
     <link rel="stylesheet" href="css/swiper-bundle.min.css">
     <link rel="stylesheet" href="css/normalize.css">
     <link rel="stylesheet" href="css/style.min.css">
     <!-- &display=swap &subset=cyrillic-ext -->
-    <link
-        href="https://fonts.googleapis.com/css?family=Rubik:300,regular,500,600,700,800,900,300italic,italic,500italic,600italic,700italic,800italic,900italic"
-        rel="stylesheet" &display=swap &subset=cyrillic-ext />
 
 
     <title>Триколор</title>
@@ -49,23 +49,24 @@
         <section class="hero">
             <div class="container">
                 <div class="hero__wrapper">
-                    <div class="hero__slider-block">
-                        <div class="hero__swiper-container">
-                            <div class="hero__swiper-wrapper">
-                                <div class="hero__swiper-slide">
-                                    <div class="hero__swiper-bg"></div>
-                                    <img class="hero__swiper-paralax-antenna">
-                                    <img class="hero__swiper-paralax-router">
+                    <div class="slider-block">
+                        <div class="swiper-container">
+                            <div class="swiper-wrapper">
+                                <div class="swiper-slide">
+                                    <div class="swiper-bg"></div>
+                                    <img class="swiper-paralax-antenna">
+                                    <img class="swiper-paralax-router">
                                 </div>
-                                <div class="hero__swiper-slide">
-                                    <div class="hero__swiper-bg"></div>
-                                    <img class="hero__swiper-paralax-img1">
-                                    <img class="hero__swiper-paralax-img2">
+                                <div class="swiper-slide">
+                                    <div class="swiper-bg"></div>
+                                    <img class="swiper-paralax-img1">
+                                    <img class="swiper-paralax-img2">
                                 </div>
                             </div>
-                            <div class="hero__swiper-pagination"></div>
+                            <div class="swiper-pagination"></div>
                         </div>
                     </div>
+
                     <div class="hero__services">
                         <h1 class="hero__services-title">Установка, продажа и настройка оборудования <span class="accent">ТРИКОЛОР</span></h1>
                         <ul class="hero__services-list">
