--- a/app/index.html
+++ b/app/index.html
@@ -109,6 +109,13 @@
                 </div>
             </div>
         </section>
+
+        <section class="equipment">
+            <div class="container">
+            <div class="title">Комплекты и оборудование</div>
+            
+            </div>
+        </section>
     </main>
 
     <footer class="footer"></footer>
