--- a/app/index.html
+++ b/app/index.html
@@ -115,19 +115,20 @@
             <div class="title">Комплекты и оборудование</div>
 
             <div class="equipment-tabs">
-                <nav class="equipment-tabs__items">
-                    <a href="#tab_01" class="equipment-tabs__item">Первая вкладка</a>
-                    <a href="#tab_02" class="equipment-tabs__item">Вторая вкладка</a>
-                    <a href="#tab_03" class="equipment-tabs__item">Третья вкладка</a>
+                <nav class="equipment-tabs__nav">
+                    <button class="equipment-tabs__nav-btn" type="button" data-tab="#tab_1">Кнопка 1</button>
+                    <button class="equipment-tabs__nav-btn" type="button" data-tab="#tab_2">Кнопка 2</button>
+                    <button class="equipment-tabs__nav-btn" type="button" data-tab="#tab_3">Кнопка 3</button>
                 </nav>
-                <div class="equipment-tabs__body">
-                    <div id="tab_01" class="equipment-tabs__block">
+
+                <div class="equipment-tabs__content">
+                    <div class="equipment-tabs__content-item" id="tab_1">
                         Lorem ipsum dolor sit amet consectetur adipisicing elit. Cum, reprehenderit vero. Consequuntur nostrum illo voluptas soluta natus accusantium? Aut unde dolore, illum fugiat repudiandae quibusdam, ea aperiam est nesciunt veritatis omnis quae explicabo id sed sint eum nihil, a qui iste. Nobis natus eligendi nostrum quod vel quo quas veniam.
                     </div>
-                    <div id="tab_02" class="equipment-tabs__block">
+                    <div class="equipment-tabs__content-item" id="tab_2">
                         Lorem ipsum dolor sit amet consectetur adipisicing elit. Fuga, recusandae tempore consectetur consequatur earum culpa ratione quisquam dolores, quam officia praesentium maiores provident reprehenderit aut pariatur libero voluptas nostrum dolorum, non ad adipisci accusamus? Nobis mollitia at pariatur quae, unde optio sint deserunt! A, vero praesentium vitae recusandae sint voluptate ipsum accusamus dolorem dignissimos omnis quisquam natus aliquid repellendus, temporibus similique veritatis ipsa officia aperiam eos fugit ea impedit quia reiciendis iure? Autem necessitatibus beatae aliquid. Aspernatur voluptates iste cumque rerum eaque inventore modi at fugit dolores, dolorem nisi ratione. Esse accusamus voluptatibus cupiditate id incidunt, fuga vero debitis et.
                     </div>
-                    <div id="tab_03" class="equipment-tabs__block">
+                    <div class="equipment-tabs__content-item" id="tab_3">
                         Lorem ipsum dolor sit amet, consectetur adipisicing elit. Vel, reprehenderit repudiandae? Asperiores deleniti error suscipit distinctio tenetur natus tempore, ducimus, porro dolore in eaque debitis voluptatem veniam. Omnis suscipit repudiandae, similique saepe sed molestias deleniti ullam vitae? Sint, repellat? Obcaecati dolor ipsa laudantium provident, quod accusantium quibusdam tempora pariatur dolorem similique veritatis ab nam, necessitatibus numquam perferendis delectus harum aut suscipit sequi, facere deleniti vitae ea veniam dolore. Dolorum, consequuntur?
                     </div>
                 </div>
@@ -141,6 +142,7 @@
 
     <script src="https://unpkg.com/swiper/swiper-bundle.min.js"></script>
     <script src="js/swiper.js"></script>
+    <script src="js/tabs.js"></script>
     <script src="js/main.js"></script>
 
 </body>
