--- a/app/index.html
+++ b/app/index.html
@@ -45,7 +45,6 @@
     </header>
 
     <main class="page">
-
         <section class="hero">
             <div class="container">
                 <div class="hero__wrapper">
@@ -54,18 +53,30 @@
                             <div class="swiper-wrapper">
                                 <div class="swiper-slide">
                                     <div class="swiper-bg"></div>
-                                    <img class="swiper-paralax-antenna" src="images/bg/antenna.png" alt="" data-swiper-parallax-opacity="0" data-swiper-parallax="-100" data-swiper-parallax-duration="500"> 
-                                    <img class="swiper-paralax-router" src="images/bg/router.png" alt="" data-swiper-parallax-opacity="0" data-swiper-parallax="-400" data-swiper-parallax-duration="500">
+                                    <img class="swiper-paralax-antenna" src="images/bg/antenna.png" alt=""
+                                        data-swiper-parallax-opacity="0" data-swiper-parallax="-100"
+                                        data-swiper-parallax-duration="500">
+                                    <img class="swiper-paralax-router" src="images/bg/router.png" alt=""
+                                        data-swiper-parallax-opacity="0" data-swiper-parallax="-400"
+                                        data-swiper-parallax-duration="500">
                                 </div>
                                 <div class="swiper-slide">
                                     <div class="swiper-bg" data-swiper-parallax="-20%"></div>
-                                    <img class="swiper-paralax-antenna" src="images/bg/antenna.png" alt="" data-swiper-parallax-opacity="0" data-swiper-parallax="-100" data-swiper-parallax-duration="500"> 
-                                    <img class="swiper-paralax-router" src="images/bg/router.png" alt="" data-swiper-parallax-opacity="0" data-swiper-parallax="-400" data-swiper-parallax-duration="500">
+                                    <img class="swiper-paralax-antenna" src="images/bg/antenna.png" alt=""
+                                        data-swiper-parallax-opacity="0" data-swiper-parallax="-100"
+                                        data-swiper-parallax-duration="500">
+                                    <img class="swiper-paralax-router" src="images/bg/router.png" alt=""
+                                        data-swiper-parallax-opacity="0" data-swiper-parallax="-400"
+                                        data-swiper-parallax-duration="500">
                                 </div>
                                 <div class="swiper-slide">
                                     <div class="swiper-bg" data-swiper-parallax="-20%"></div>
-                                    <img class="swiper-paralax-antenna" src="images/bg/antenna.png" alt="" data-swiper-parallax-opacity="0" data-swiper-parallax="-100" data-swiper-parallax-duration="500"> 
-                                    <img class="swiper-paralax-router" src="images/bg/router.png" alt="" data-swiper-parallax-opacity="0" data-swiper-parallax="-400" data-swiper-parallax-duration="500">
+                                    <img class="swiper-paralax-antenna" src="images/bg/antenna.png" alt=""
+                                        data-swiper-parallax-opacity="0" data-swiper-parallax="-100"
+                                        data-swiper-parallax-duration="500">
+                                    <img class="swiper-paralax-router" src="images/bg/router.png" alt=""
+                                        data-swiper-parallax-opacity="0" data-swiper-parallax="-400"
+                                        data-swiper-parallax-duration="500">
                                 </div>
                             </div>
                             <div class="swiper-pagination"></div>
@@ -73,14 +84,16 @@
                     </div>
 
                     <div class="hero__services">
-                        <h1 class="hero__services-title">Установка, продажа и настройка оборудования <span class="accent">ТРИКОЛОР</span></h1>
+                        <h1 class="hero__services-title">Установка, продажа и настройка оборудования <span
+                                class="accent">ТРИКОЛОР</span></h1>
                         <ul class="hero__services-list">
-                            <div class="hero__services-descr">Закажите оборудование сейчас и получите <span class="accent">3 ПОДАРКА:</span></div>
+                            <div class="hero__services-descr">Закажите оборудование сейчас и получите <span
+                                    class="accent">3 ПОДАРКА:</span></div>
                             <li class="hero__services-item">Грозозащиту</li>
                             <li class="hero__services-item">Сим-карту с безлимитным интернет тарифом</li>
                             <li class="hero__services-item">Скидку 10% на любую услугу</li>
                         </ul>
-                        <button class="hero__btn btn" >заказать</button>
+                        <button class="hero__btn btn">заказать</button>
                         <div class="hero__promo-cards">
                             <div class="hero__promo-card">
                                 <div class="hero__promo-card-icon">
@@ -100,11 +113,11 @@
                                 <div class="hero__promo-card-icon">
                                     <img src="images/icons/signal-icon.png" alt="" class="hero__promo-card-img">
                                 </div>
-                                <div class="hero__promo-card-text">Надежный прием 
+                                <div class="hero__promo-card-text">Надежный прием
                                     в любой точке РФ</div>
                             </div>
                         </div>
-                        
+
                     </div>
                 </div>
             </div>
@@ -112,28 +125,72 @@
 
         <section class="equipment">
             <div class="container">
-            <div class="title">Комплекты и оборудование</div>
+                <div class="title">Комплекты и оборудование</div>
 
-            <div class="equipment-tabs">
-                <nav class="equipment-tabs__nav">
-                    <button class="equipment-tabs__nav-btn" type="button" data-tab="#tab_1">Кнопка 1</button>
-                    <button class="equipment-tabs__nav-btn" type="button" data-tab="#tab_2">Кнопка 2</button>
-                    <button class="equipment-tabs__nav-btn" type="button" data-tab="#tab_3">Кнопка 3</button>
-                </nav>
+                <div class="equipment-tabs">
+                    <nav class="equipment-tabs__nav">
 
-                <div class="equipment-tabs__content">
-                    <div class="equipment-tabs__content-item" id="tab_1">
-                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Cum, reprehenderit vero. Consequuntur nostrum illo voluptas soluta natus accusantium? Aut unde dolore, illum fugiat repudiandae quibusdam, ea aperiam est nesciunt veritatis omnis quae explicabo id sed sint eum nihil, a qui iste. Nobis natus eligendi nostrum quod vel quo quas veniam.
-                    </div>
-                    <div class="equipment-tabs__content-item" id="tab_2">
-                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Fuga, recusandae tempore consectetur consequatur earum culpa ratione quisquam dolores, quam officia praesentium maiores provident reprehenderit aut pariatur libero voluptas nostrum dolorum, non ad adipisci accusamus? Nobis mollitia at pariatur quae, unde optio sint deserunt! A, vero praesentium vitae recusandae sint voluptate ipsum accusamus dolorem dignissimos omnis quisquam natus aliquid repellendus, temporibus similique veritatis ipsa officia aperiam eos fugit ea impedit quia reiciendis iure? Autem necessitatibus beatae aliquid. Aspernatur voluptates iste cumque rerum eaque inventore modi at fugit dolores, dolorem nisi ratione. Esse accusamus voluptatibus cupiditate id incidunt, fuga vero debitis et.
-                    </div>
-                    <div class="equipment-tabs__content-item" id="tab_3">
-                        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Vel, reprehenderit repudiandae? Asperiores deleniti error suscipit distinctio tenetur natus tempore, ducimus, porro dolore in eaque debitis voluptatem veniam. Omnis suscipit repudiandae, similique saepe sed molestias deleniti ullam vitae? Sint, repellat? Obcaecati dolor ipsa laudantium provident, quod accusantium quibusdam tempora pariatur dolorem similique veritatis ab nam, necessitatibus numquam perferendis delectus harum aut suscipit sequi, facere deleniti vitae ea veniam dolore. Dolorum, consequuntur?
+                        <button class="equipment-tabs__nav-btn" type="button" data-tab="#tab_1">
+                            <img class="equipment-tabs__nav-btn-icon" src="images/icons/free-icon.png" alt="">
+                            <div class="equipment-tabs__nav-btn-text">Спутниковое телевидение</div>
+                        </button>
+
+                        <button class="equipment-tabs__nav-btn" type="button" data-tab="#tab_2">
+                            <div class="equipment-tabs__nav-btn-icon"></div>
+                            <div class="equipment-tabs__nav-btn-text">Спутниковое телевидение</div>
+                        </button>
+
+                        <button class="equipment-tabs__nav-btn" type="button" data-tab="#tab_3">
+                            <div class="equipment-tabs__nav-btn-icon"></div>
+                            <div class="equipment-tabs__nav-btn-text">Спутниковый интернет</div>
+                        </button>
+
+                        <button class="equipment-tabs__nav-btn" type="button" data-tab="#tab_3">
+                            <div class="equipment-tabs__nav-btn-icon"></div>
+                            <div class="equipment-tabs__nav-btn-text">Умный дом</div>
+                        </button>
+
+                        <button class="equipment-tabs__nav-btn" type="button" data-tab="#tab_3">
+                            <div class="equipment-tabs__nav-btn-icon"></div>
+                            <div class="equipment-tabs__nav-btn-text">Эфирное телевидиние</div>
+                        </button>
+
+                        <button class="equipment-tabs__nav-btn" type="button" data-tab="#tab_3">
+                            <div class="equipment-tabs__nav-btn-icon"></div>
+                            <div class="equipment-tabs__nav-btn-text">Видеонаблю-дение</div>
+                        </button>
+                    </nav>
+
+                    <div class="equipment-tabs__content">
+                        <div class="equipment-tabs__content-item" id="tab_1">
+                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Cum, reprehenderit vero.
+                            Consequuntur nostrum illo voluptas soluta natus accusantium? Aut unde dolore, illum fugiat
+                            repudiandae quibusdam, ea aperiam est nesciunt veritatis omnis quae explicabo id sed sint
+                            eum nihil, a qui iste. Nobis natus eligendi nostrum quod vel quo quas veniam.
+                        </div>
+                        <div class="equipment-tabs__content-item" id="tab_2">
+                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Fuga, recusandae tempore
+                            consectetur consequatur earum culpa ratione quisquam dolores, quam officia praesentium
+                            maiores provident reprehenderit aut pariatur libero voluptas nostrum dolorum, non ad
+                            adipisci accusamus? Nobis mollitia at pariatur quae, unde optio sint deserunt! A, vero
+                            praesentium vitae recusandae sint voluptate ipsum accusamus dolorem dignissimos omnis
+                            quisquam natus aliquid repellendus, temporibus similique veritatis ipsa officia aperiam eos
+                            fugit ea impedit quia reiciendis iure? Autem necessitatibus beatae aliquid. Aspernatur
+                            voluptates iste cumque rerum eaque inventore modi at fugit dolores, dolorem nisi ratione.
+                            Esse accusamus voluptatibus cupiditate id incidunt, fuga vero debitis et.
+                        </div>
+                        <div class="equipment-tabs__content-item" id="tab_3">
+                            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Vel, reprehenderit repudiandae?
+                            Asperiores deleniti error suscipit distinctio tenetur natus tempore, ducimus, porro dolore
+                            in eaque debitis voluptatem veniam. Omnis suscipit repudiandae, similique saepe sed
+                            molestias deleniti ullam vitae? Sint, repellat? Obcaecati dolor ipsa laudantium provident,
+                            quod accusantium quibusdam tempora pariatur dolorem similique veritatis ab nam,
+                            necessitatibus numquam perferendis delectus harum aut suscipit sequi, facere deleniti vitae
+                            ea veniam dolore. Dolorum, consequuntur?
+                        </div>
                     </div>
                 </div>
-            </div>
-            
+
             </div>
         </section>
     </main>
