--- a/app/index.html
+++ b/app/index.html
@@ -130,67 +130,126 @@
                 <div class="equipment-tabs">
                     <nav class="equipment-tabs__nav">
 
-                        <button class="equipment-tabs__nav-btn" type="button" data-tab="#tab_1">
-                            <img class="equipment-tabs__nav-btn-icon" src="images/icons/free-icon.png" alt="">
-                            <div class="equipment-tabs__nav-btn-text">Спутниковое телевидение</div>
+                        <button class="equipment-tabs__btn" type="button" data-tab="#tab_1">
+                            <img class="equipment-tabs__btn-icon" src="images/icons/free-icon.png" alt="">
+                            <div class="equipment-tabs__btn-text">Спутниковое телевидение</div>
                         </button>
 
-                        <button class="equipment-tabs__nav-btn" type="button" data-tab="#tab_2">
-                            <div class="equipment-tabs__nav-btn-icon"></div>
-                            <div class="equipment-tabs__nav-btn-text">Спутниковое телевидение</div>
+                        <button class="equipment-tabs__btn" type="button" data-tab="#tab_2">
+                            <div class="equipment-tabs__btn-icon"></div>
+                            <div class="equipment-tabs__btn-text">3G/4G связь и интернет</div>
                         </button>
 
-                        <button class="equipment-tabs__nav-btn" type="button" data-tab="#tab_3">
-                            <div class="equipment-tabs__nav-btn-icon"></div>
-                            <div class="equipment-tabs__nav-btn-text">Спутниковый интернет</div>
+                        <button class="equipment-tabs__btn" type="button" data-tab="#tab_3">
+                            <div class="equipment-tabs__btn-icon"></div>
+                            <div class="equipment-tabs__btn-text">Спутниковый интернет</div>
                         </button>
 
-                        <button class="equipment-tabs__nav-btn" type="button" data-tab="#tab_3">
-                            <div class="equipment-tabs__nav-btn-icon"></div>
-                            <div class="equipment-tabs__nav-btn-text">Умный дом</div>
+                        <button class="equipment-tabs__btn" type="button" data-tab="#tab_4">
+                            <div class="equipment-tabs__btn-icon"></div>
+                            <div class="equipment-tabs__btn-text">Умный дом</div>
                         </button>
 
-                        <button class="equipment-tabs__nav-btn" type="button" data-tab="#tab_3">
-                            <div class="equipment-tabs__nav-btn-icon"></div>
-                            <div class="equipment-tabs__nav-btn-text">Эфирное телевидиние</div>
+                        <button class="equipment-tabs__btn" type="button" data-tab="#tab_5">
+                            <div class="equipment-tabs__btn-icon"></div>
+                            <div class="equipment-tabs__btn-text">Эфирное телевидиние</div>
                         </button>
 
-                        <button class="equipment-tabs__nav-btn" type="button" data-tab="#tab_3">
-                            <div class="equipment-tabs__nav-btn-icon"></div>
-                            <div class="equipment-tabs__nav-btn-text">Видеонаблю-дение</div>
+                        <button class="equipment-tabs__btn" type="button" data-tab="#tab_6">
+                            <div class="equipment-tabs__btn-icon"></div>
+                            <div class="equipment-tabs__btn-text">Видеонаблю-дение</div>
                         </button>
                     </nav>
 
                     <div class="equipment-tabs__content">
+
                         <div class="equipment-tabs__content-item" id="tab_1">
-                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Cum, reprehenderit vero.
-                            Consequuntur nostrum illo voluptas soluta natus accusantium? Aut unde dolore, illum fugiat
-                            repudiandae quibusdam, ea aperiam est nesciunt veritatis omnis quae explicabo id sed sint
-                            eum nihil, a qui iste. Nobis natus eligendi nostrum quod vel quo quas veniam.
+                            <div class="equipment-tabs__inner-tabs">
+
+                                <nav class="equipment-tabs__inner-nav">
+                                    <button class="equipment-tabs__inner-btn" type="button" data-tab="#tab_1"></button>
+                                </nav>
+                                <div class="equipment-tabs__inner-content">
+                                    <div class="equipment-tabs__inner-item" id="tab_1"></div>
+                                </div>
+
+                            </div>
                         </div>
+
                         <div class="equipment-tabs__content-item" id="tab_2">
-                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Fuga, recusandae tempore
-                            consectetur consequatur earum culpa ratione quisquam dolores, quam officia praesentium
-                            maiores provident reprehenderit aut pariatur libero voluptas nostrum dolorum, non ad
-                            adipisci accusamus? Nobis mollitia at pariatur quae, unde optio sint deserunt! A, vero
-                            praesentium vitae recusandae sint voluptate ipsum accusamus dolorem dignissimos omnis
-                            quisquam natus aliquid repellendus, temporibus similique veritatis ipsa officia aperiam eos
-                            fugit ea impedit quia reiciendis iure? Autem necessitatibus beatae aliquid. Aspernatur
-                            voluptates iste cumque rerum eaque inventore modi at fugit dolores, dolorem nisi ratione.
-                            Esse accusamus voluptatibus cupiditate id incidunt, fuga vero debitis et.
+                            <div class="equipment-tabs__inner-tabs">
+
+                                <nav class="equipment-tabs__inner-nav">
+                                    <button class="equipment-tabs__inner-btn" type="button" data-tab="#tab_1"></button>
+                                </nav>
+                                <div class="equipment-tabs__inner-content">
+                                    <div class="equipment-tabs__inner-item" id="tab_1"></div>
+                                </div>
+
+                            </div>
                         </div>
                         <div class="equipment-tabs__content-item" id="tab_3">
-                            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Vel, reprehenderit repudiandae?
-                            Asperiores deleniti error suscipit distinctio tenetur natus tempore, ducimus, porro dolore
-                            in eaque debitis voluptatem veniam. Omnis suscipit repudiandae, similique saepe sed
-                            molestias deleniti ullam vitae? Sint, repellat? Obcaecati dolor ipsa laudantium provident,
-                            quod accusantium quibusdam tempora pariatur dolorem similique veritatis ab nam,
-                            necessitatibus numquam perferendis delectus harum aut suscipit sequi, facere deleniti vitae
-                            ea veniam dolore. Dolorum, consequuntur?
+                            <div class="equipment-tabs__inner-tabs">
+
+                                <nav class="equipment-tabs__inner-nav">
+                                    <button class="equipment-tabs__inner-btn" type="button" data-tab="#tab_1"></button>
+                                </nav>
+                                <div class="equipment-tabs__inner-content">
+                                    <div class="equipment-tabs__inner-item" id="tab_1"></div>
+                                </div>
+
+                            </div>
+                        </div>
+                        <div class="equipment-tabs__content-item" id="tab_4">
+                            <div class="equipment-tabs__inner-tabs">
+
+                                <nav class="equipment-tabs__inner-nav">
+                                    <button class="equipment-tabs__inner-btn" type="button" data-tab="#tab_1"></button>
+                                </nav>
+                                <div class="equipment-tabs__inner-content">
+                                    <div class="equipment-tabs__inner-item" id="tab_1"></div>
+                                </div>
+                            </div>
+
+                        </div>
+                        <div class="equipment-tabs__content-item" id="tab_5">
+                            <div class="equipment-tabs__inner-tabs">
+
+                                <nav class="equipment-tabs__inner-nav">
+                                    <button class="equipment-tabs__inner-btn" type="button" data-tab="#tab_1"></button>
+                                </nav>
+                                <div class="equipment-tabs__inner-content">
+                                    <div class="equipment-tabs__inner-item" id="tab_1"></div>
+                                </div>
+                            </div>
+
+                        </div>
+                        <div class="equipment-tabs__content-item" id="tab_6">
+                            <div class="equipment-tabs__inner-tabs">
+
+                                <nav class="equipment-tabs__inner-nav">
+                                    <button class="equipment-tabs__inner-btn" type="button" data-tab="#tab_1"></button>
+                                </nav>
+                                <div class="equipment-tabs__inner-content">
+                                    <div class="equipment-tabs__inner-item" id="tab_1"></div>
+                                </div>
+                            </div>
+
                         </div>
                     </div>
                 </div>
 
+            </div>
+        </section>
+
+        <section class="benefit">
+            <div class="title">подключив <span class="accent">триколор</span> вы получите: </div>
+            <div class="container">
+                <div class="benefit__wrapper">
+                    <div class="benefit__item">
+                        
+                    </div>
+                </div>
             </div>
         </section>
     </main>
