--- a/app/index.html
+++ b/app/index.html
@@ -99,21 +99,21 @@
                                 <div class="hero__promo-card-icon">
                                     <img src="images/icons/hd-icon.png" alt="" class="hero__promo-card-img">
                                 </div>
-                                <div class="hero__promo-card-text">220 каналов
+                                <div class="hero__promo-card-text">220 каналов <br>
                                     в HD качестве</div>
                             </div>
                             <div class="hero__promo-card">
                                 <div class="hero__promo-card-icon">
                                     <img src="images/icons/mony-icon.png" alt="" class="hero__promo-card-img">
                                 </div>
-                                <div class="hero__promo-card-text">от 100 рублей
+                                <div class="hero__promo-card-text">от 100 рублей <br>
                                     в месяц</div>
                             </div>
                             <div class="hero__promo-card">
                                 <div class="hero__promo-card-icon">
                                     <img src="images/icons/signal-icon.png" alt="" class="hero__promo-card-img">
                                 </div>
-                                <div class="hero__promo-card-text">Надежный прием
+                                <div class="hero__promo-card-text">Надежный прием <br>
                                     в любой точке РФ</div>
                             </div>
                         </div>
@@ -164,16 +164,54 @@
                     <div class="equipment-tabs__content">
 
                         <div class="equipment-tabs__content-item" id="tab_1">
+
                             <div class="equipment-tabs__inner-tabs">
-
-                                <nav class="equipment-tabs__inner-nav">
-                                    <button class="equipment-tabs__inner-btn" type="button" data-tab="#tab_1"></button>
+                                <nav class="equipment-tabs__inner-tabs-nav">
+                                    <button class="equipment-tabs__inner-tabs-btn inner-active" type="button"
+                                        data-tab="#inner-tab_1">
+                                        Комплекты
+                                    </button>
+                                    <button class="equipment-tabs__inner-tabs-btn" type="button"
+                                        data-tab="#inner-tab_2">
+                                        Обмен
+                                    </button>
+                                    <button class="equipment-tabs__inner-tabs-btn" type="button"
+                                        data-tab="#inner-tab_3">
+                                        Ресиверы
+                                    </button>
+                                    <button class="equipment-tabs__inner-tabs-btn" type="button"
+                                        data-tab="#inner-tab_4">
+                                        Эфирное ТВ
+                                    </button>
+                                    <button class="equipment-tabs__inner-tabs-btn" type="button"
+                                        data-tab="#inner-tab_5">
+                                        Антенны-тарелки
+                                    </button>
                                 </nav>
-                                <div class="equipment-tabs__inner-content">
-                                    <div class="equipment-tabs__inner-item" id="tab_1"></div>
-                                </div>
 
+                                <div class="equipment-tabs__inner-tabs-content">
+                                    <div class="equipment-tabs__inner-tabs-item" id="inner-tab_1">
+                                        <div class="slider-block">
+                                            <div class="swiper-container">
+                                                <div class="swiper-wrapper">
+                                                    <div class="swiper-slide">Slide 1</div>
+                                                    <div class="swiper-slide">Slide 2</div>
+                                                    ...
+                                                </div>
+                                                <div class="swiper-pagination"></div>
+                                                <div class="swiper-button-prev"></div>
+                                                <div class="swiper-button-next"></div>
+                                                <div class="swiper-scrollbar"></div>
+                                            </div>
+                                        </div>
+                                    </div>
+                                    <div class="equipment-tabs__inner-tabs-item" id="inner-tab_2"></div>
+                                    <div class="equipment-tabs__inner-tabs-item" id="inner-tab_3"></div>
+                                    <div class="equipment-tabs__inner-tabs-item" id="inner-tab_4"></div>
+                                    <div class="equipment-tabs__inner-tabs-item" id="inner-tab_5"></div>
+                                </div>
                             </div>
+
                         </div>
 
                         <div class="equipment-tabs__content-item" id="tab_2">
@@ -241,6 +279,7 @@
 
             </div>
         </section>
+
 
         <section class="benefit">
             <div class="container">
